button effects, mobile responsive adjustments

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br>
-                <center><p class="card-ext" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"alt="status"></span></p></center><br>
-                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"alt="portfolio"></i>&nbsp;</a>
-                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" alt="github"class="fab fa-github"></i>&nbsp;</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;" alt="discord" class="fab fa-discord"></i>&nbsp;</a>
-                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" alt="twitter"class="fab fa-twitter"></i>&nbsp;</a>
-                <!-- <a href="https://www.youtube.com/channel/UCrQmJZuXR1G0ueq8Svmqsng" class="btn btn-outline-dark"><i style="color: #FF0000;"alt="youtube" class="fab fa-youtube"></i>&nbsp;</a> -->
-                <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;"alt="my endpoints" class="fas fa-eye"></i>&nbsp;</a>
+                <center><p class="card-ext" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"></span></p></center><br>
+                <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <!-- <a href="https://www.youtube.com/channel/UCrQmJZuXR1G0ueq8Svmqsng" class="btn btn-outline-dark"><i style="color: #FF0000;"class="fab fa-youtube"></i>&nbsp;</a> -->
+                <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
           <div class="card text-white bg-dark" ">
