--- a/index.html
+++ b/index.html
@@ -26,13 +26,25 @@
     <link rel="manifest" href="site.webmanifest"> 
     <link rel="icon" href="./assets/img/vlogo.png"> 
     <!-- <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> -->
-    <!-- <script src="https://cdn.tailwindcss.com/"></script> -->
+    <script src="https://cdn.tailwindcss.com/"></script>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="./assets/js/index.js" type="text/javascript"></script> 
 </head>
 
 <body>
-
+  <div class="px-3 md:px-2 py-2" style="background-color: #0e141d">
+    <div class="max-w-6xl mx-auto container text-white">
+      <div class="flex">
+        <div class="flex-initial">
+          <i class="twa twa-laptop-computer font-bold mr-4"></i>
+        </div>
+        &nbsp;
+        <div class="flex-1">
+          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" >This website is open source.</a> <i class="fab fa-github github"></i>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="max-w-8xl mx-auto container z-50 sticky top-0 bg-[#0A131F] dark:bg-[#0A0F16] border-b-2 border-[#0F1A27] dark:border-[#0E141D] py-4">
     <div class="headerLogo d-flex flex-wrap align-items-center justify-content-lg-start">
       <a class="navbar-brand" href="/">
@@ -117,7 +129,7 @@
         </div>
         
   </div><br><br><br><br>
-  <div class="d-flex flex-wrap justify-content-between align-items-center " >
+  <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;" >
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
