removed bots page, added projects. updated nav and fixed a lot of styling

--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
 </head>
 
 <body>
-  <div class="px-3 md:px-2 py-2" style="background-color: #0e141d">
+  <div class="px-3 md:px-2 py-2" style="background-color: #0e141d;">
     <div class="max-w-6xl mx-auto container text-white">
       <div class="flex">
         <div class="flex-initial">
           <i class="twa twa-laptop-computer font-bold mr-4"></i>
         </div>
-        &nbsp;
         <div class="flex-1">
-          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" >This website is open source.</a> <i class="fab fa-github github"></i>
+          <a href="https://github.com/JoKeRxTD/voltic.thedev.id" target="_blank" class="openSource" style="align-items: center;" >This website is open source.</a> <i class="fab fa-github github"></i>
         </div>
       </div>
     </div>
@@ -51,18 +50,20 @@
         <img src="./assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-top" style="border-radius: 50rem;">
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <li><a href="https://voltic.thedev.id" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
-        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" ><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;
+        <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
+        <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
+        <li><a href="./pages/projects.html" class="nav-link px-2 secondary"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Projects</a></li>&nbsp;
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;
+        
       </ul>
     </div>
 </div>
   <div class="container">
-    <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo">
-            <h2 class="headerTitle" style="text-decoration: none; color: #7289DA;">Voltic Development</h2><br>
-        <h6 class="headerTitle"> 
-            Our website will be updated over time. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
-        </h5>
+    <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
+            <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
+        <h3 class="headerTitle"> 
+            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
+        </h3>
 <br>
       <!-- Recruiting Box -->
         <div class="flip-card">
@@ -77,7 +78,7 @@
         </div>
 <br><br><br><br>
         <!-- Staff Team -->
-          <h4 class="staffsectionTitle">Staff Team</h4>
+          <h4 class="staffsectionTitle" style="text-align: center;">Staff Team</h4>
         <br>
         <br>
         <div class="endPoints">
@@ -129,7 +130,7 @@
         </div>
         
   </div><br><br><br><br>
-  <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;" >
+  <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
