oops forgot to change this

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -58,8 +58,8 @@
       </ul>
     </div>
 </div>
-  <div class="container"><br><br><br><br>
-    <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
+  <div class="container">
+    <center><img class="logoImg" src="../assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 class="headerTitle"><i class="fas fa-project-diagram" style="color: #7289DA;"></i>&nbsp;Projects</h2><br>
         <h3 class="headerDesc"> 
             Here are our current Projects that are in Development. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
