hot fixing some stuff?

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <div class="container">
     <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
-        <h3 class="headerTitle"> 
+        <p class="headerTitle"> 
             Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
-        </h3>
+        </p>
 <br>
       <!-- Recruiting Box -->
         <div class="flip-card">
