--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,20 +62,20 @@
     <center><img class="logoImg" src="../assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 class="headerTitle"><i class="fas fa-project-diagram" style="color: #7289DA;"></i>&nbsp;Projects</h2><br>
         <h3 class="headerDesc"> 
-            Here are our current Projects that are in Development. <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
-        </h3>
+            Here are our current Projects that are in Development. <br>
+        </h3><br>
       <!-- Recruiting Box -->
-        <!-- <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <p>We are recruiting!</p>
-            </div>
-            <div class="flip-card-back">
-              We are currently looking for members to join our Staff Team<br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >Discord</a> For more information
-            </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <p>Want to join our Development Team? <br><a draggable="false" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" >&nbsp;<i class="fas fa-smile-wink" style="color: #7289DA;"></i></i>&nbsp;Hover Here </a> </p>
           </div>
-        </div> -->
-        <br><br><br><br><br><br>
+          <div class="flip-card-back" style="text-decoration: none; color: #97A9B4; font-weight: bolder;">
+            <br> Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information
+          </div>
+        </div>
+      </div>
+        <br><br><br><br>
         <div class="endPoints">
 
            <!-- TODO Mythbot Radio -->
@@ -86,9 +86,9 @@
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
                 <center><p class="card-ext" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
-                <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Home</a>
-                <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;Invite</a>
-                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
               </div>
             </div>
 
@@ -100,9 +100,9 @@
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="../assets/img/projects/dscbots2.gif" > </img></center><br>
                 <center><p class="card-ext" >&nbsp;<span>Find the best Discord Bots for your server with DscBots!</span></p></center><br>
-                <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;Home</a>
-                <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;Add Bot</a>
-                <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a>
+                <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
+                <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
               </div>
             </div>
           <!-- <div class="card text-white bg-dark" ">
