--- a/pages/projects.html
+++ b/pages/projects.html
@@ -81,12 +81,12 @@
            <!-- TODO Mythbot Radio -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              <i style="color: #7289DA;"  class="fab fa-discord"></i> Mythbot Radio
+              Mythbot Radio
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
                 <center><p class="card-ext" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
-                <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
               </div>
@@ -95,12 +95,12 @@
             <!-- TODO DscBots -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
-              <i style="color: #7289DA;"  class="fab fa-discord"></i> DscBots
+               DscBots
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
-                <center><img class="staffImg" src="../assets/img/projects/dscbots2.gif" > </img></center><br>
+                <center><img class="staffImg" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
                 <center><p class="card-ext" >&nbsp;<span>Find the best Discord Bots for your server with DscBots!</span></p></center><br>
-                <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
+                <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
                 <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
               </div>
