--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="container">
     <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
-        <p class="headerTitle"> 
+        <p class="headerTitle" style="font-size: 1rem;"> 
             Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="fab fa-discord" style="color: #7289DA;"></i>Discord</a>
         </p>
     <br>
