remove some buttons from staff card

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a>
+                <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a> -->
                 <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
@@ -135,7 +135,7 @@
                 <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
-                <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a>
+                <!-- <a href="/" class="btn btn-outline-dark"><i style="color: #FF0000;" class="fab fa-youtube"></i>&nbsp;</a> -->
                 <a href="/" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a>
               </div>
             </div>
