--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br>
-               <p class="card-text" href="https://discord.com/users/116730818822537225">Bio:&nbsp;<span id="discordStatus_socials"></span></p><br>
+                <h5>
+                  <a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a>
+                </h5>
+               <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
 
                 <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
                
@@ -113,7 +116,10 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-                <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_1" style="color: #fafafa;">Some cool bio here</span></p></center><br>
+                <h5>
+                  <a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Developer</a>
+                </h5>
+                <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
                 <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
@@ -130,7 +136,10 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" src="./assets/img/voltic-pholder.png" > </img></center><br>
-                <center><p class="card-text" href="/">Bio:&nbsp;<span id="discord_status_2">Some cool bio here</span></p></center><br>
+                <h5>
+                  <a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Sr.Administrator</a>
+                </h5>
+                <center><p class="card-text" href="/" style="padding-bottom: 1rem;">&nbsp;We are looking for Staff, Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more information</p></center><br>
                 <a href="/" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
                 <a href="/" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
