--- a/pages/projects.html
+++ b/pages/projects.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
-                <center><p class="card-ext" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
                 <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
                 <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
-                <center><p class="card-ext" >&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
+                <center><p class="card-text">&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
                 <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
                 <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
                 <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
@@ -110,7 +110,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
-                 <center><p class="card-ext" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
+                 <center><p class="card-text" >&nbsp;Join our <a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
                  <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
                  <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fas fa-plus-square"></i>&nbsp;</a>
                  <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
