--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="staffImg" src="./assets/img/staff/joker.gif" > </img></center><br> -->
-                <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.png"></img></center><br><br><br>
+                <center><img class="staffImg" id="joker_avatar" src="https://cdn.discordapp.com/avatars/116730818822537225/a_8e5fad610c822f5ecb4721066bb9ab97.gif"></img></center><br><br><br>
                 <h5>
                   <a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a>
                 </h5>
