few styling adjustments ❤️

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -60,9 +60,9 @@
   <div class="container">
     <center><img class="logoImg" src="../assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 class="headerTitle"><i class="fas fa-project-diagram" style="color: #7289DA;"></i>&nbsp;Projects</h2><br>
-        <h3 class="headerDesc"> 
-            Here are our current Projects that are in Development. <br>
-        </h3><br>
+        <p class="headerTitle" style="font-size: 1rem;"> 
+          Here are our current Projects that are in Development.
+        </p><br>
       <!-- Recruiting Box -->
       <div class="flip-card">
         <div class="flip-card-inner">
@@ -74,9 +74,11 @@
           </div>
         </div>
       </div>
-        <br><br><br><br>
-        <div class="endPoints">
+        <div class="header">
+          <h4>Current Projects</h4>
+        </div>
 
+        <div class="endPoints">
            <!-- TODO Mythbot Radio -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
