--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
         <li><a href="./pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <div class="btn-group">
+        <!-- <di  v class="btn-group"> -->
           <button class="btn3 btn-outline-dark btn-sm dropdown-toggle" style="background-color: #0e141d; width: 6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store
           </button>
           <ul class="dropdown-menu" style="background-color: #0e141d;justify-content: space-around;padding-top: 2rem;">
             <li><a href="https://www.mythbot.org/basic" class="btn3 btn-outline-dark" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
-            <li><a href="https://www.mythbot.org/standard" class="btn3 btn-outline-dark"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/standard" class="btn3 btn-outline-dark" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
             <li><a href="https://www.mythbot.org/premium" class="btn3 btn-outline-dark" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
           </ul>
-        </div>
+        <!-- </div> -->
       </ul>
       
     </div>
