--- a/pages/projects.html
+++ b/pages/projects.html
@@ -44,19 +44,27 @@
     </div>
   </div>
   <div class="max-w-8xl mx-auto container z-50 sticky top-0 bg-[#0A131F] dark:bg-[#0A0F16] border-b-2 border-[#0F1A27] dark:border-[#0E141D] py-4">
-    <div class="headerLogo d-flex flex-wrap align-items-center justify-content-lg-start">
+    <div class="headerLogo d-flex align-items-center justify-content-lg-start">
       <a class="navbar-brand" href="/">
-        <img src="../assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-top" style="border-radius: 50rem;">
+        <img src="../assets/img/vlogot.png" alt="" width="50" height="50" class="d-inline-block align-text-left" style="border-radius: 50rem;">
       </a>
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #7289DA;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
+        <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
-        <li><a href="../pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
-        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;
-        
+        <li><a href="./pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
+        <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <di  v class="btn-group">
+          <button class="btn3 btn-outline-dark btn-sm dropdown-toggle" style="background-color: #0e141d; width: 6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store
+          </button>
+          <ul class="dropdown-menu" style="background-color: #0e141d;">
+            <li><a href="https://www.mythbot.org/basic" class="nav-link px-2 secondary" style="" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/standard" class="nav-link px-2 secondary" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/premium" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
+          </ul>
+        </div>
       </ul>
     </div>
-</div>
   <div class="container">
     <center><img class="logoImg" src="../assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
             <h2 class="headerTitle"><i class="fas fa-project-diagram" style="color: #7289DA;"></i>&nbsp;Projects</h2><br>
