dropdown menu styling issues fixed

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -51,16 +51,16 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
-        <li><a href="./pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
+        <li><a href="../pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <di  v class="btn-group">
-          <button class="btn3 btn-outline-dark btn-sm dropdown-toggle" style="background-color: #0e141d; width: 6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-outline-dark btn-sm dropdown-toggle" style="width:6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store
           </button>
-          <ul class="dropdown-menu" style="background-color: #0e141d;">
-            <li><a href="https://www.mythbot.org/basic" class="nav-link px-2 secondary" style="" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
-            <li><a href="https://www.mythbot.org/standard" class="nav-link px-2 secondary" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
-            <li><a href="https://www.mythbot.org/premium" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
+          <ul class="dropdown-menu" style="background-color: #0e141d;width: 1rem;border-radius: .5rem;">
+            <li><a href="https://www.mythbot.org/basic" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-top: 1rem;margin-left: 1rem;" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/standard" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-left: 1rem;" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/premium" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-left: 1rem;" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
           </ul>
         </div>
       </ul>
