--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <button class="btn btn-outline-dark btn-sm dropdown-toggle" style="width:6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-store" style="color: #1c7723;"></i>&nbsp;Store
           </button>
-          <ul class="dropdown-menu" style="background-color: #0e141d;">
-            <li><a href="https://www.mythbot.org/basic" class="nav-link px-2 secondary" style="" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
-            <li><a href="https://www.mythbot.org/standard" class="nav-link px-2 secondary" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
-            <li><a href="https://www.mythbot.org/premium" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
+          <ul class="dropdown-menu" style="background-color: #0e141d;width: 1rem;border-radius: .5rem;">
+            <li><a href="https://www.mythbot.org/basic" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-top: 1rem;margin-left: 1rem;" target="_blank"><i style="color: #fafafa;" class="fas fa-bold"></i>&nbsp;Basic</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/standard" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-left: 1rem;" target="_blank"><i class="fab fa-stripe-s" style="color: #6b3434;"></i>&nbsp;Standard</a></li>&nbsp;
+            <li><a href="https://www.mythbot.org/premium" class="nav-link px-2 secondary" style="width: 8rem;position: relative;margin-left: 1rem;" target="_blank"><i style="color: #7289DA;" class="fas fa-star"></i>&nbsp;Premium</a></li>&nbsp;
           </ul>
         </div>
       </ul>
