--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
         <li><a href="/" class="nav-link px-2 secondary" ><i style="color: #8e9629;"  class="fas fa-house-user"></i>&nbsp;Home</a></li>&nbsp;
         <li><a href="https://github.com/Voltic-Development" class="nav-link px-2 secondary" target="_blank"><i style="color: #fafafa;"  class="fab fa-github"></i>&nbsp;Github</a></li>&nbsp;
-        <li><a href="./pages/projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
+        <li><a href="./projects.html" class="nav-link px-2 secondary"><i class="fas fa-project-diagram" style="color: #6b3434;"></i>&nbsp;Projects</a></li>&nbsp;
         <li><a href="https://discord.gg/Q6ZSW63Fpw" class="nav-link px-2 secondary" target="_blank"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;Discord</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <di  v class="btn-group">
           <button class="btn btn-outline-dark btn-sm dropdown-toggle" style="width:6rem;font-size:1.5vh;" type="button" data-bs-toggle="dropdown" aria-expanded="false">
