updated *Store* page fixed grid row styling error

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
           <h4>Current Projects</h4>
         </div>
 
-        <div class="endPoints">
+        <div class="ourProjects">
            <!-- TODO Mythbot Radio -->
           <div class="card text-white bg-dark" ">
              <div class="card-header" style="background-color: #1a2535;">
