--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="header">
           <h4>Our Team</h4>
         </div>
-        <div class="endPoints">
+        <div class="ourTeam">
           <!--! JoKeR#0001 -->
           <div class="card text-white bg-dark" >
              <div class="card-header" style="background-color: #1a2535;">
@@ -91,9 +91,9 @@
                 <h5><a  style="text-decoration: none; color: #7289DA; font-weight: bolder;" >CEO / Lead Developer</a> </h5>
                 <p class="card-text" href="https://discord.com/users/116730818822537225" style="color: #fafafa;">I am always looking to learn new things! It is all about the&nbsp;<a href="https://discord.gg/Q6ZSW63Fpw" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Experience</a></p><br>
                 <a href="https://joker.is-a.dev" class="btn btn-outline-dark"><i class="fas fa-portrait" style="color: #6b3434;"></i>&nbsp;</a>
-                <a  href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
-                <a  href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
-                <a  href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
+                <a href="https://github.com/jokerxtd" class="btn btn-outline-dark"><i style="color: #fafafa;" class="fab fa-github"></i>&nbsp;</a>
+                <a href="https://www.mythbot.org/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="fab fa-discord"></i>&nbsp;</a>
+                <a href="https://twitter.com/JoKeRxHD" class="btn btn-outline-dark"><i style="color: #1DA1F2;" class="fab fa-twitter"></i>&nbsp;</a>
                 <a href="https://api.mythbot.org" class="btn btn-outline-dark"><i style="color: #6b3434;" class="fas fa-eye"></i>&nbsp;</a><br>
               </div>
             </div>
@@ -130,7 +130,69 @@
               </div>
             </div>
         </div>
-  </div><br><br><br><br>
+  </div>
+  <div class="header" style="text-align: center;">
+    <h4>Contact Us</h4>
+  </div>
+  <div class="contactUs"> 
+    <form class="row g-2 needs-validation" novalidate>
+      <div class="col-md-5">
+        <label for="validationCustom01" class="form-label">First name</label>
+        <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+      </div>
+      <div class="col-md-4">
+        <label for="validationCustomUsername" class="form-label">Username</label>
+        <div class="input-group has-validation">
+          <span class="input-group-text" id="inputGroupPrepend">#</span>
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          <div class="invalid-feedback">
+            Please enter a valid discord name
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <label for="validationCustom03" class="form-label">City</label>
+        <input type="text" class="form-control" id="validationCustom03" required>
+        <div class="invalid-feedback">
+          Please provide a valid city.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="validationCustom04" class="form-label">State</label>
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Choose...</option>
+          <option>...</option>
+        </select>
+        <div class="invalid-feedback">
+          Please select a valid state.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="validationCustom05" class="form-label">Zip</label>
+        <input type="text" class="form-control" id="validationCustom05" required>
+        <div class="invalid-feedback">
+          Please provide a valid zip.
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+          <label class="form-check-label" for="invalidCheck">
+            Agree to terms and conditions
+          </label>
+          <div class="invalid-feedback">
+            You must agree before submitting.
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <button class="btn btn-primary" type="submit">Submit form</button>
+      </div>
+    </form>
+  </div>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
