--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
               </div>
             </div>
         </div>
-  </div>
-  <div class="header" style="text-align: center;">
+  </div><br><br><br><br><br><br>
+  <!-- <div class="header" style="text-align: center;">
     <h4>Contact Us</h4>
   </div>
   <div class="contactUs"> 
@@ -191,7 +191,7 @@
       <div class="col-12">
         <button class="btn btn-primary" type="submit">Submit form</button>
       </div>
-    </form>
+    </form> -->
   </div>
   <div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
     <div class="col-md-4 d-flex align-items-center">
