--- a/store.html
+++ b/store.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b></span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b> Per Month</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing page + Source Code</b></span></p></center><br>
                 <a href="https://vdevs.tebex.io/package/4882074" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£19.40</b></span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£19.40</b> Per Month</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br>
                 <a href="https://vdevs.tebex.io/package/4882076" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
@@ -119,7 +119,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
-                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.95</b></span></p></center><br>
+                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.95</b> Per Month</span></p></center><br>
                  <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br>
                  <a href="https://vdevs.tebex.io/package/4882078" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.98</b></span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£6.98</b> Per Month</span></p></center><br>
                 <center><ul class="list-group">
                           <li class="list-group-item"><b style="color: #7289DA;">3</b>&nbsp;FTP Accounts</li>
                           <li class="list-group-item"><b style="color: #7289DA;">5</b>&nbsp;Personal Emails</li>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.76</b></span></p></center><br>
+                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.76</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                             <li class="list-group-item"><b style="color: #7289DA;">7</b>&nbsp;FTP Accounts</li>
                             <li class="list-group-item"><b style="color: #7289DA;">12</b>&nbsp;Personal Emails</li>
@@ -188,7 +188,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.62</b></span></p></center><br>
+                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.62</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                             <li class="list-group-item"><b style="color: #7289DA;">25</b>&nbsp;FTP Accounts</li>
                             <li class="list-group-item"><b style="color: #7289DA;">18</b>&nbsp;Personal Emails</li>
@@ -211,7 +211,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                   <!-- <img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" style="margin: 2rem;"> </img><br> -->
-                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£ TBD</b></span></p></center><br>
+                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£x.xx</b> Per Month</span></p></center><br>
                   <center><ul class="list-group">
                             <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;FTP Accounts</li>
                             <li class="list-group-item"><b style="color: #7289DA;">#</b>&nbsp;Personal Emails</li>
