--- a/store.html
+++ b/store.html
@@ -88,7 +88,7 @@
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b> Per Month</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing page + Source Code</b></span></p></center><br>
-                <a href="https://vdevs.tebex.io/package/4882074" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                <a href="https://vdevs.tebex.io/package/4882074" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 NEW
@@ -105,7 +105,7 @@
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£19.40</b> Per Month</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br>
-                <a href="https://vdevs.tebex.io/package/4882076" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
               </div>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 NEW
@@ -121,7 +121,7 @@
                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
                  <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£27.95</b> Per Month</span></p></center><br>
                  <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br>
-                 <a href="https://vdevs.tebex.io/package/4882078" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                 <a href="https://vdevs.tebex.io/package/4882078" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                </div>
                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 NEW
@@ -150,7 +150,7 @@
                         </ul>
                 </center>
                 <br>
-                <a href="https://vdevs.tebex.io/package/4842894" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                <a href="https://vdevs.tebex.io/package/4842894" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                   NEW
                   <span class="visually-hidden">New Package</span>
@@ -174,7 +174,7 @@
                           </ul>
                   </center>
                   <br>
-                  <a href="https://vdevs.tebex.io/package/4842918" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                  <a href="https://vdevs.tebex.io/package/4842918" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     NEW
                     <span class="visually-hidden">New Package</span>
@@ -197,7 +197,7 @@
                           </ul>
                   </center>
                   <br>
-                  <a href="https://vdevs.tebex.io/package/4842919" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                  <a href="https://vdevs.tebex.io/package/4842919" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     NEW
                     <span class="visually-hidden">New Package</span>
@@ -220,7 +220,7 @@
                           </ul>
                   </center>
                   <br>
-                  <a href="https://vdevs.tebex.io/package/4842921" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
+                  <a href="https://vdevs.tebex.io/package/4842921" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a>
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                     NEW
                     <span class="visually-hidden">New Package</span>
